deploy/em-gmail-receiver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: em-gmail-receiver-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: em-gmail-receiver
  template:
    metadata:
      labels:
        app: em-gmail-receiver
    spec:
      serviceAccountName: em-ksa
      containers:
        - name: em-gmail-receiver-container
          image: fperezsdev/emanager-repo:em-gmail-receiver
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: '1m'
          livenessProbe:
            httpGet:
              path: /api/v1/em-gmail-receiver/status
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/em-gmail-receiver/status
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /api/v1/em-gmail-receiver/status
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.4
          args:
            - '--auto-iam-authn'
            - '--structured-logs'
            - '--port=5432'
            - 'emanager-44:us-central1:emanager-postgre'

          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              memory: '2Gi'
              cpu: '1'
---
apiVersion: v1
kind: Service
metadata:
  name: em-gmail-receiver-service
spec:
  type: ClusterIP
  selector:
    app: em-gmail-receiver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
