deploy/em-realtime-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: em-realtime-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: em-realtime-api
  template:
    metadata:
      labels:
        app: em-realtime-api
    spec:
      serviceAccountName: em-ksa
      containers:
        - name: em-realtime-api-container
          image: fperezsdev/emanager-repo:em-realtime-api
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: '1m'
          livenessProbe:
            httpGet:
              path: /api/v1/em-realtime-api/status
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v1/em-realtime-api/status
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          startupProbe:
            httpGet:
              path: /api/v1/em-realtime-api/status
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: em-realtime-api-service
spec:
  type: ClusterIP
  selector:
    app: em-realtime-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
