deploy/em-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: em-redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: em-redis
  template:
    metadata:
      labels:
        app: em-redis
    spec:
      containers:
        - name: em-redis-container
          image: redis:alpine
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: '1m'
          volumeMounts:
            - name: redis-data
              mountPath: /redis-data
            - name: redis-config
              mountPath: /redis-config
      volumes:
        - name: redis-config
          configMap:
            name: em-redis-config
        - name: redis-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: em-redis-service
spec:
  selector:
    app: em-redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
